--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* contents */
+.contents{
+  min-height: 100vh;
+  overflow-y: scroll;
+}
+
+.res-img{
+  width: 400px;
+  height: 400px;
+  border-radius: 12px;
+}
+/* logo */
+.logo{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
