--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,98 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.arrow:hover{
+  color: gold;
+  transform: scale(1.3);
+  transition: all ease-in 0.2s ;
+}
+.img{
+  min-width: 75%;
+  height: 200px;
+  border-radius: 12%;
+}
+
+.btn_back{
+  position: fixed;
+  bottom: 2rem;
+  right: 3rem;
+  z-index: 999;
+}
+
+/* f_id */
+.f_id{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+
+}
+
+.f_id_box{
+  height: 500px;
+  background: rgba(207, 228, 207, 0.591);
+}
+
+.img_id{
+  height: 300px;
+  width: 300px;
+  border-radius: 12px;
+  margin-top: 30px;
+  transition: all ease-in-out 1s ;
+
+}
+.img_id:hover{
+  transform: scale(1.6);
+}
+
+@media (min-width:430px) {
+  .img{
+    min-width: 65%;
+    height: 120px;
+    border-radius: 12%;
+  }
+  .card-body{
+    width: 90%;
+  }
+  .f_id_box{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0px;
+  }
+}
+@media (min-width:375px) {
+  .img{
+    min-width: 65%;
+    height: 120px;
+    border-radius: 12%;
+  }
+  .card-body{
+    width: 90%;
+  }
+  .f_id_box{
+   position: absolute;
+  top: 7rem;
+  left: 2rem;
+  }
+  .btn_back{
+    left: 1rem;
+  }
+}
+@media (min-width:360px) {
+  .img{
+    min-width: 65%;
+    height: 120px;
+    border-radius: 12%;
+  }
+  .card-body{
+    width: 90%;
+  }
+  .f_id_box{
+   position: absolute;
+  top: 7rem;
+  left: 2rem;
+  }
+  .btn_back{
+    left: 1rem;
+  }
+}
